--- a/content/자바스크립트/04.변수.md
+++ b/content/자바스크립트/04.변수.md
@@ -4,7 +4,7 @@ title: 변수
 date: '2021-11-09 22:00:00'
 author: sangzun
 tags: 자바스크립트
-categories: 모던 자바스크립트 Deep Dive
+categories: javascript
 ---
 
 # 1. 변수
@@ -29,7 +29,7 @@ console.log(result) // 30
 식별자는 어떤 값을 구별해서 식별할 수 있는 고유한 이름을 말한다. **식별자는 값이 아니라 메모리 주소를 기억하고 있다.**
 식별자로 값을 구별해서 식별한다는 것은 식별자가 기억하고 있는 메모리 주소를 통해 메모리 공간에 저장된 값에 접근할 수 있다는 의미이다.
 
-![식별자](./identifier.jpg)
+![식별자](/identifier.jpg)
 
 # 3.변수 선언
 
@@ -70,10 +70,10 @@ var score; // 변수 선언
 이처럼 **변수 선언문이 코드의 선두로 끌어 올려진것처럼 동작하는 자바스크립트 고유의 특징을 변수 호이스팅(variable hoisting)**이라 한다.
 
 # 5. 값의 할당
+
 ```
 var score; // 변수 선언
 score = 80; // 값의 할당
-
 var score = 80;
 ```
 
@@ -84,7 +84,7 @@ console.log(score); // undefined
 var score = 80;
 console.log(score) // 80
 ```
-![할당](./reallocation.jpg)
+![할당](/reallocation.jpg)
 
 변수에 값을 할당할 때에는 undefined가 저장되어 있던 메모리 공간을 지우고 그 메모리 공간에 새로 저장하는 것이 아니라 새로운 메모리 공간을 확보하고 그곳에 할당값을 저장한다.
 
