--- a/content/자바스크립트/07.연산자.md
+++ b/content/자바스크립트/07.연산자.md
@@ -78,10 +78,13 @@ console.log(str) // 'name is Han'
 5 === '5'; // false
 ```
 
-자바스크립트에서 숫자 0은 양의 0과 음의 0으로 나누어져 있다. 이들을 비교하면 true를 반환한다.
+자바스크립트에서 숫자 0은 양의 0과 음의 0으로 나누어져 있다. 이들을 비교하면 true를 반환한다. 또한 동일한 값인 NaN가 NaN을 비교하면 다른 값이라고 평가한다.
+
+따라서 Object.is 메서드를 사용하면 정확한 비교 결과를 반환한다.
 
 ```
 NaN === NaN // false
+Object.is(NaN, NaN) // true
 ```
 NaN은 자신과 일치하지 않는 유일한 값이다 NaN을 조사하려면 **isNaN**함수를 사용해야 한다.
 
@@ -139,3 +142,58 @@ var result = if(x % 2) {result = '홀수'} else {result = '짝수'}
 논리 부정 연산자는 언제나 boolean값을 반환한다. 단 피연산자가 반드시 boolean값일 필요는 없다. 피연산자가 boolean타입이 아니라면 암묵적 타입 변환된다.
 
 # 5. 쉼표 연산자
+
+쉼표(,) 연산자는 왼쪽 피연산자부터 차례대로 피연산자를 평가하고 마지막 피연산자의 평가가 끝나면 마지막 피연산자의 평가 결과를 반환한다.
+
+```
+var x,y,z;
+x = 1, y = 2, z = 3;
+```
+
+# 6. 그룹 연산자
+
+소괄호 ()로 피연산자를 감싸는 그룹 연산자는 자신의 피연산자인 표현식을 가장 먼저 평가한다. 그룹 연산자는 연산자 우선순위가 가장 높다.
+
+# 7. typeof 연산자
+
+typeof 연산자는 피연산자의 데이터 타입을 문자열로 반환한다. typeof 연산자는 7가지 문자열 **'string', 'number', 'boolean', 'undefined', 'symbol', 'object', 'function'** 중 하나를 반환한다.
+
+**null을 반환하는 경우는 없다. 자바스크립트 첫번째 버전의 버그이지만 기존 코드에 영향을 줄 수 있기 때문에 수정을 하지 않는다.**
+
+
+null 타입인지 확인할때는 일치 연산자(===)을 사용한다.
+
+```
+typeof '' // String
+typeof 1 // number
+typeof NaN // number
+typeof true // boolean
+typeof undefiend // undefined
+typeof Symbol() // symbol
+typeof null // object
+typeof [] // object
+typeof {} // object
+typeof new Date() // object
+typeof /test/gi // object
+typeof function(){} // function
+
+var foo = null;
+foo === null // true
+```
+
+# 8. 지수 연산자
+
+ES7에서 도입된 지수연산자는 좌항의 피연산자를 밑(base)로 우항의 피연산자를 지수(exponent)로 거듭 제곱하여 계산한다. 지수 연산자 이전에는 Math.pow 메서드를 사용했다.
+
+음수를 거듭제곱의 밑으로 사용하려면 괄호로 묶어야 한다.
+```
+(-5) ** 2;
+```
+
+# 9. 연산자의 부수효과
+
+대부분의 연산자는 다른 코드에 영향을 주지 않는다. 예를들어 2*3은 다른 코드에 어떠한 영향도 주지 않고 새로운 값 6을 생성한다. 하지만 일부 연산자는 다른 코드에 영향을 주는 부수 효과가 있다. ex) 할당연산자(=), 증가/감소 연산자(++/--), delete 연산자
+
+<a href="https://velog.io/@hanminss/JS-Group-Study-07.%EC%97%B0%EC%82%B0%EC%9E%90">study width
+
+
