--- a/content/자바스크립트/08.제어문.md
+++ b/content/자바스크립트/08.제어문.md
@@ -6,3 +6,111 @@ author: sangzun
 tags: 자바스크립트
 categories: javascript
 ---
+
+# 1. 블록문
+
+블록문(block statement)은 0개 이상의 문을 중괄호로 묶은 것으로, 코드 블록 또는 블록이라고 부르기도 한다. 자바스크립트는 블록문을 하나의 실행 단위로 취급한다.
+
+```
+{
+  var foo = 10;
+}
+
+var x = 1;
+if (x < 10){
+  x++;
+}
+
+function sum(a,b) {
+  return a + b ;
+}
+```
+
+# 2. 조건문
+
+조건문(conditional statement)는 주어진 조건식의 평가결과에 따라 코드 블록의 실행을 결정한다. 자바스크립트는 if else문과 switch문으로 두 가지 조건문을 제공한다.
+
+```
+if (조건식) {
+
+} else if(조건식) {
+
+} else {
+
+}
+```
+
+if문의 조건식은 boolean값으로 평가되어야 한다. boolean값이 아닐경우 암묵적으로 boolean값으로 강제 변환되어 실행할 코드 블록을 결정한다.
+
+대부분의 if else문은 삼항 조건 연산자로 바꿔 쓸수 있다. 조건에 따라 값을 결정하여 변수에 할당하는 경우 if else 보다 삼항 조건 연산자를 사용하는 편이 가독성이 좋다. 하지만 조건에 따라 실행해야 할 내용이 복잡하여 여러 줄의 문이 필요하다면 if else문을 사용하는 편이 가독성이 좋다.
+
+switch문은 주어진 표현식을 평가하여 그 값과 일치하는 표현식을 갖는 case문으로 실행 흐름을 옮긴다. case문은 상황을 의미하는 표현식을 지정하고 콜론으로 마친다. 그리고 그 뒤로 실행할 문들을 위치 시킨다.
+
+switch문의 표현식과 일치하는 case문이 없다면 실행순서는 default로 옮긴다. default는 선택사항이다.
+
+```
+switch (표현식) {
+  case 표현식1:
+    ~~~~
+    break;
+  case 표현식2:
+    ~~~~
+    break;
+  default:
+    ~~~
+}
+```
+
+switch문은 boolean값보다는 문자열이나 숫자값인 경우가 많다.
+
+# 3. 반복문
+
+반복문(loop statement)는 조건식의 평가 결과가 참인 경우 코드블록을 실행한다. 그후 조건식을 다시 평가하여 여전히 참인경우 코드 블록을 다시 실행한다. 조건식이 거짓이 될 때 까지 반복한다.
+
+```
+자바스크립트는 forEach, for ...in, 
+for ...of문과 같이 반복문을 대체할 수 있는 기능을 제공한다.
+```
+
+for문의 변수 선언문, 조건식, 증감식은 모두 옵셥이므로 반드시 사용할 필요는 없다. 단 어떤 식도 선언하지 않으면 무한루프가 된다.
+
+while문은 주로 반복횟수가 불명확할때 사용한다. 조건식의 결과가 항상 참이면 무한루프가 된다. 무한루프를 탈출하기 위해서는 if문으로 탈출조건을 만들고 break문으로 코드 블록을 탈출한다.
+
+do...while문은 코드 블록을 먼저 실행하고 조건식을 평가한다. 즉 코드블록은 무조건 한번이상 실행된다.
+
+# 4. break문
+
+break문은 코드 블록을 탈출한다. 레이블문, 반복문 또는 switch문의 코드 블록을 탈출한다. 이 외에 break를 사용하면 문법에러가 발생한다.
+
+**레이블문 (label statement)이란 식별자가 붙은 문을 말한다.**
+
+```
+foo: console.log('foo');
+```
+
+레이불믄은 중첩된 for문 외부로 탈출할때 유용하지만 그 외의 경우에는 권장되지 않는다. 프로그램의 흐름이 복잡해져서 가독성이 나빠지고 오류를 발생시킬 가능성이 높아지기 때문이다.
+
+```
+outer: for (var i=0; i<3; i++) {
+  for (var j=0; j<3 j++) {
+    if(i+j === 3) break outer;
+    console.log(`inner[${i},${j}`]);
+  }
+}
+```
+
+# 5. continue문
+
+continue문은 반복문의 코드 블록 실행을 현 지점에서 중단하고 반복문의 증감식으로 실행흐름을 이동시킨다. 반복문을 탈출하지 않는다.
+
+if문 내에서 실행해야 할 코드가 길다면 들여쓰기가 한단계 더 깊어지므로 continue문을 사용하는 편이 더 가독성이 좋다.
+
+```
+for (var i=0; i<string.length; i++) {
+  if (string[i]!==search) continue;
+
+  count++;
+  ~~~
+  ~~~
+}
+```
