--- a/content/자바스크립트/21.빌트인 객체.md
+++ b/content/자바스크립트/21.빌트인 객체.md
@@ -13,7 +13,7 @@ categories: javascript
 
 - ***표준 빌트인 객체(standard built-in objects/native objects/global objects)***
 
-표준 빌트인 객체는 ECMAScript 사양에 정의된 객체를 말하며 자바스크립트 싷행 환경과 관계없이 언제나 사용할수 있다. 별도의 선언 없이 전역 변수처럼 언제나 참조 할 수 있다.
+표준 빌트인 객체는 ECMAScript 사양에 정의된 객체를 말하며 자바스크립트 실행 환경과 관계없이 언제나 사용할수 있다. 별도의 선언 없이 전역 변수처럼 언제나 참조 할 수 있다.
 
 - 호스트 객체(host objects)
 
