--- a/content/자바스크립트/25.클래스.md
+++ b/content/자바스크립트/25.클래스.md
@@ -23,3 +23,47 @@ categories: javascript
 2. 접근자 프로퍼티: 자체적으로 값을 갖지 않고 다른 데이터 프로퍼티 값을 읽거나 저장할 때 사용하는 접근자 함수로 구성된 프로퍼티
 3. 클래스 필드 : 클래스 기반의 객체 지향 언어에서 클래스가 생성할 인스턴스의 프로퍼티
 4. private : private 필드의 앞에는 #을 붙여주고 참조할 때도 붙여준다.
+
+# 3. 상속에 의한 클래스 확장
+
+상속에 의한 클래스 확장은 기존 클래스를 상속받아 새로운 클래스를 ***확장(extends)***하여 정의하는것이다.
+
+상속을 통해 클래스를 확장하려면 extends 키워드를 사용하여 상속받을 클래스를 정의한다. 
+
+```
+class Base {}
+
+class Derived extends Base {}
+```
+
+extends 키워드는 클래스뿐만 아니라 생성자 함수를 상속받아 클래스를 확장할 수 도 있다.
+
+extends 키워드 다음에는 클래스뿐만 아니라 [[Construct]] 내부 메서드를 갖는 함수 객체로 평가될 수 있는 모든 표현식을 사용할 수 있다.
+
+super 키워드는 함수처럼 호출할 수 도 있고 this와 같이 식별자처럼 참조할 수 있는 특수한 키워드이다. 
+- super를 호출하면 수퍼클래스의 constructor를 호출한다.
+- super를 참조하면 수퍼클래스의 메서드를 호출할 수 있다.
+
+```
+class Base {
+  constructor(a,b) {
+    this.a = a;
+    this.b = b;
+  }
+}
+
+class Derived extends Base {
+  constructor(a,b,c) {
+    super(a,b);
+    this.c = c;
+  }
+}
+
+const derived = new Derived(1,2,3);
+console.log(derived); // Derived {a: 1, b: 2, c: 3}
+```
+
+- 서브클래스에서 constructor를 생략하지 않는 경우 서브클래스의 constructor에서는 반드시 super를 호출해야 한다.
+- 서브클래스의 constructor에서 super를 호출하기 전에는 this를 참조할 수 없다.
+- super는 반드시 서브클래스의 constructor에서만 호출한다.
+- ***메서드 내에서 super를 참조하면 수퍼클래스의 메서드를 호출 할 수 있다.***
