--- a/content/자바스크립트/27.배열.md
+++ b/content/자바스크립트/27.배열.md
@@ -1,5 +1,5 @@
 ---
-emoji: 
+emoji:
 title: 27. 배열
 date: '2021-12-21 12:00:00'
 author: sangzun
@@ -9,7 +9,7 @@ categories: javascript
 
 # 1. 배열
 
-배열은 여러 개의 값을 순차적으로 나열한 자료구조이다. 배열은 읻게스와 length 프로퍼티를 갖기 때문에 for문을 통해 순차적으로 접근할 수 있다.
+배열은 여러 개의 값을 순차적으로 나열한 자료구조이다. 배열은 인덱스와 length 프로퍼티를 갖기 때문에 for문을 통해 순차적으로 접근할 수 있다.
 
 ```
 const arr = ['a','b','c'];
@@ -22,7 +22,7 @@ for (let i=0; i < arr.length; i++) {
 
 # 2. 자바스크립트의 배열
 
-자바스크립트의 배열은 배열의 요소를 위한 각각의 메모리 공간은 동일한 크기를 갖지 않아도 되며, 연속적으로 이어져 있지 않을 수도 있다. 즉 ***희소 행렬(sparse array)이다.***
+자바스크립트의 배열은 배열의 요소를 위한 각각의 메모리 공간은 동일한 크기를 갖지 않아도 되며, 연속적으로 이어져 있지 않을 수도 있다. 즉 **_희소 행렬(sparse array)이다._**
 
 - 자바스크립트 배열은 해시 테이블로 구현된 객체이므로 인덱스로 요소에 접근하는 경우 일반적인 배열보다 성능적인 면에서 느린 구조적인 단점이 있다. 하지만 특정 요소를 검색하거나 삽입,삭제하는 경우에는 일반적인 배열보다 빠른 성능을 기대할 수 있다.
 
@@ -42,7 +42,7 @@ arr.length = 3;
 console.log(arr); // [1,2,3]
 ```
 
-***희소배열은 legnth와 배열 요소의 개수가 일치하지 않는다. 희소 배열의 legnth는 희소 배열의 실제 요소개수보다 언제나 크다.***
+**_희소배열은 legnth와 배열 요소의 개수가 일치하지 않는다. 희소 배열의 legnth는 희소 배열의 실제 요소개수보다 언제나 크다._**
 
 배열을 생성할 때는 희소 배열을 생성하지 않도록 주의해야한다.
 
@@ -184,11 +184,11 @@ numbers.forEach(item, index, arr) => {arr[index] = item ** 2}
 console.log(numbers) // 1,4,9
 ```
 
-- Array.prototype.map : 자신을 호출한 배열의 모든 요소를 순회하면서 인수로 전달받은 콜백함수를 반복 호출한다. 그리고 콜백 함수의 반환값들로 구성된 새로운 배열을 반환한다. ***원본 배열은 변경되지 않는다.***
+- Array.prototype.map : 자신을 호출한 배열의 모든 요소를 순회하면서 인수로 전달받은 콜백함수를 반복 호출한다. 그리고 콜백 함수의 반환값들로 구성된 새로운 배열을 반환한다. **_원본 배열은 변경되지 않는다._**
 
-- Array.prototype.filter : 자신을 호출한 배열의 모든 요소를 순회하면서 인수로 전달받은 콜백함수를 반복 호출한다. 콜백 함수의 반환값이 true인 요소로만 구성된 새로운 배열을 반환한다. ***원본 배열은 변경되지 않는다.***
+- Array.prototype.filter : 자신을 호출한 배열의 모든 요소를 순회하면서 인수로 전달받은 콜백함수를 반복 호출한다. 콜백 함수의 반환값이 true인 요소로만 구성된 새로운 배열을 반환한다. **_원본 배열은 변경되지 않는다._**
 
-- Array.prototype.reduce : 자신을 호출한 배열의 모든 요소를 순회하며 인수로 전달받은 콜백함수를 반복 호출한다. 콜백 함수의 반환값을 다음 순회시에 콜백함수의 첫번째 인수로 전달하면서 콜백 함수를 호출하여 하나의 결과값을 만들어 반환한다.  ***원본 배열은 변경되지 않는다.***
+- Array.prototype.reduce : 자신을 호출한 배열의 모든 요소를 순회하며 인수로 전달받은 콜백함수를 반복 호출한다. 콜백 함수의 반환값을 다음 순회시에 콜백함수의 첫번째 인수로 전달하면서 콜백 함수를 호출하여 하나의 결과값을 만들어 반환한다. **_원본 배열은 변경되지 않는다._**
 
 ```
 const sum = [1,2,3,4].reduce((accumulator, currentValue, index, arr) => accumulator + currentValue , 0)
