--- a/content/자바스크립트/07.연산자.md
+++ b/content/자바스크립트/07.연산자.md
@@ -1,5 +1,5 @@
 ---
-emoji: 
+emoji:
 title: 07. 연산자
 date: '2021-11-12 16:00:00'
 author: sangzun
@@ -44,9 +44,10 @@ var x = true;
 console.log(+x) // 1
 console.log(x) // true
 ```
+
 ### 1-3. 문자열 연결 연산자
 
-+ 연산자는 피연산자 중 하나 이상이 문자열인 경우 문자열 연결 연산자로 동작한다.
+- 연산자는 피연산자 중 하나 이상이 문자열인 경우 문자열 연결 연산자로 동작한다.
 
 ```
 '1' + 2; // '12'
@@ -54,7 +55,8 @@ console.log(x) // true
 
 1 + true; // 2
 ```
-개발자의 의도와는 상관없이 자바스크립트 엔진에 의해 암묵적으로 타입이 자동 변환되기도 한다. 이를 **암묵적 타입 변환(implicit coercion) 또는 타입 강제 변환(type coercion)**이라고 한다 
+
+개발자의 의도와는 상관없이 자바스크립트 엔진에 의해 암묵적으로 타입이 자동 변환되기도 한다. 이를 **암묵적 타입 변환(implicit coercion) 또는 타입 강제 변환(type coercion)**이라고 한다
 
 # 2. 할당 연산자
 
@@ -86,6 +88,7 @@ console.log(str) // 'name is Han'
 NaN === NaN // false
 Object.is(NaN, NaN) // true
 ```
+
 NaN은 자신과 일치하지 않는 유일한 값이다 NaN을 조사하려면 **isNaN**함수를 사용해야 한다.
 
 ```
@@ -133,11 +136,11 @@ var result = if(x % 2) {result = '홀수'} else {result = '짝수'}
 
 논리 연산자(logical operator)는 우항과 좌항의 피연산자를 논리 연산 한다.
 
-|논리 연산자|의미|부수효과|
-|------|---|---|
-|｜｜|논리합(OR)|X|
-|&&|논리곱(AND)|X|
-|!|부정(NOT)|X|
+| 논리 연산자 | 의미        | 부수효과 |
+| ----------- | ----------- | -------- |
+| ｜｜        | 논리합(OR)  | X        |
+| &&          | 논리곱(AND) | X        |
+| !           | 부정(NOT)   | X        |
 
 논리 부정 연산자는 언제나 boolean값을 반환한다. 단 피연산자가 반드시 boolean값일 필요는 없다. 피연산자가 boolean타입이 아니라면 암묵적 타입 변환된다.
 
@@ -159,7 +162,6 @@ x = 1, y = 2, z = 3;
 typeof 연산자는 피연산자의 데이터 타입을 문자열로 반환한다. typeof 연산자는 7가지 문자열 **'string', 'number', 'boolean', 'undefined', 'symbol', 'object', 'function'** 중 하나를 반환한다.
 
 **null을 반환하는 경우는 없다. 자바스크립트 첫번째 버전의 버그이지만 기존 코드에 영향을 줄 수 있기 때문에 수정을 하지 않는다.**
-
 
 null 타입인지 확인할때는 일치 연산자(===)을 사용한다.
 
@@ -186,14 +188,13 @@ foo === null // true
 ES7에서 도입된 지수연산자는 좌항의 피연산자를 밑(base)로 우항의 피연산자를 지수(exponent)로 거듭 제곱하여 계산한다. 지수 연산자 이전에는 Math.pow 메서드를 사용했다.
 
 음수를 거듭제곱의 밑으로 사용하려면 괄호로 묶어야 한다.
+
 ```
 (-5) ** 2;
 ```
 
 # 9. 연산자의 부수효과
 
-대부분의 연산자는 다른 코드에 영향을 주지 않는다. 예를들어 2*3은 다른 코드에 어떠한 영향도 주지 않고 새로운 값 6을 생성한다. 하지만 일부 연산자는 다른 코드에 영향을 주는 부수 효과가 있다. ex) 할당연산자(=), 증가/감소 연산자(++/--), delete 연산자
+대부분의 연산자는 다른 코드에 영향을 주지 않는다. 예를들어 2\*3은 다른 코드에 어떠한 영향도 주지 않고 새로운 값 6을 생성한다. 하지만 일부 연산자는 다른 코드에 영향을 주는 부수 효과가 있다. ex) 할당연산자(=), 증가/감소 연산자(++/--), delete 연산자
 
 <a href="https://velog.io/@hanminss/JS-Group-Study-07.%EC%97%B0%EC%82%B0%EC%9E%90">study width
-
-
