--- a/content/자바스크립트/30.Date.md
+++ b/content/자바스크립트/30.Date.md
@@ -63,24 +63,24 @@ Date.now(); // 1641214945803
 
 1970.01.01 UTC를 기점으로 인수로 전달된 지정시간까지의 밀리초를 숫자로 반환한다. Date.UTC 메서드는 new Date(year, month, [day,hour,minute,second,millisecond])와 같은 형식의 인수를 사용해야 하며 UTC로 인식된다.
 
-- Date.prototype.getFullYear : Date 객체의 연도를 나타내는 정수를 반환
-- Date.prototype.setFullYear : Date 객체에 연도를 나타내는 정수를 설정
-- Date.prototype.getFullYear : Date 객체에 연도를 나타내는 정수를 설정
-- Date.prototype.getMonth : Date 객체의 월을 나타내는 0~11의 정수를 반환
-- Date.prototype.setMonth : Date 객체의 월을 나타내는 0~11의 정수를 설정
-- Date.prototype.getDay
-- Date.prototype.setDay
-- Date.prototype.getHours
-- Date.prototype.setHours
-- Date.prototype.getMinutes
-- Date.prototype.setMinutes
-- Date.prototype.getSeconds
-- Date.prototype.setSeconds
-- Date.prototype.getMilliseconds
-- Date.prototype.setMilliseconds
-- Date.prototype.getTime
-- Date.prototype.setTime
-- Date.prototype.getTimezoneoffset : UTC와 Date 객체에 지정된 locale 시간과의 차이를 분단위로 반환한다.
+- `Date.prototype.getFullYear` : Date 객체의 연도를 나타내는 정수를 반환
+- `Date.prototype.setFullYear` : Date 객체에 연도를 나타내는 정수를 설정
+- `Date.prototype.getFullYear` : Date 객체에 연도를 나타내는 정수를 설정
+- `Date.prototype.getMonth` : Date 객체의 월을 나타내는 0~11의 정수를 반환
+- `Date.prototype.setMonth` : Date 객체의 월을 나타내는 0~11의 정수를 설정
+- `Date.prototype.getDay`
+- `Date.prototype.setDay`
+- `Date.prototype.getHours`
+- `Date.prototype.setHours`
+- `Date.prototype.getMinutes`
+- `Date.prototype.setMinutes`
+- `Date.prototype.getSeconds`
+- `Date.prototype.setSeconds`
+- `Date.prototype.getMilliseconds`
+- `Date.prototype.setMilliseconds`
+- `Date.prototype.getTime`
+- `Date.prototype.setTime`
+- `Date.prototype.getTimezoneoffset` : UTC와 Date 객체에 지정된 locale 시간과의 차이를 분단위로 반환한다.
 
 ```
 const today = new Date();
@@ -88,11 +88,11 @@ const today = new Date();
 today.getTimezoneOffset() / 60; // -9
 ```
 
-- Date.prototype.toDateString
-- Date.prototype.toTimeString
-- Date.prototype.toISOString
-- Date.prototype.toLocaleString
-- Date.prototype.toLocaleTimeString
+- `Date.prototype.toDateString`
+- `Date.prototype.toTimeString`
+- `Date.prototype.toISOString`
+- `Date.prototype.toLocaleString`
+- `Date.prototype.toLocaleTimeString`
 
 # 3. Date를 이용한 시계
 
