--- a/content/자바스크립트/27.배열.md
+++ b/content/자바스크립트/27.배열.md
@@ -113,16 +113,16 @@ console.log(arr) // [1,3]
 
 배열에는 원본배열을 직접 변경하는 메서드(mutator method)와 원본배열을 변경하지 않고 새로운 배열을 생성하여 반환하는 메서드(accessor method)가 있다.
 
-- Array.isArray : 전달된 인수가 Array이면 true 아니면 false
-- Array.prototype.indexOf : 원본배열에서 인수로 전달된 요소를 검색하여 인덱스를 반환
-- Array.prototype.push : 인수로 전달받은 모든값을 원본배열의 마지막 요소로 추가하고 length 프로퍼티 값을 반환한다.
-- Array.prototype.pop : 원본배열에서 마지막 요소를 제거하고 제거한 요소를 반환한다.
-- Array.prototype.unshift : 인수로 전달받은 모든 값을 원본 배열의 선두에 요소로 추가하고 length 프로퍼티 값을 반환한다.
-- Array.prototype.shift : 원본배열에서 첫번째 요소를 제거하고 제거한 요소를 반환한다.
-- Array.prototype.concat : 인수로 전달된 값들을 원본배열의 마지막 요소로 추가한 새로운 배열을 반환한다. 원본배열은 변경되지 않는다.
-- Array.prototype.splice : splice(start, deleteCount, items) start 인덱스부터 deleteCount만큼 원본배열에서 요소를 제거한다. 제거한 위치에 items를 원본배열에 삽입한다.
-- Array.prototype.slice : 인수로 전달된 범위의 요소들을 복사하여 배열로 반환한다. 원본배열은 변경되지 않는다.
-- Array.prototype.join : 원본 배열의 모든 요소를 문자열로 변환한 후 구분자로 연결한 문자열을 반환한다. 구분자는 생략가능하다.
+- `Array.isArray` : 전달된 인수가 Array이면 true 아니면 false
+- `Array.prototype.indexOf` : 원본배열에서 인수로 전달된 요소를 검색하여 인덱스를 반환
+- `Array.prototype.push` : 인수로 전달받은 모든값을 원본배열의 마지막 요소로 추가하고 length 프로퍼티 값을 반환한다.
+- `Array.prototype.pop` : 원본배열에서 마지막 요소를 제거하고 제거한 요소를 반환한다.
+- `Array.prototype.unshift` : 인수로 전달받은 모든 값을 원본 배열의 선두에 요소로 추가하고 length 프로퍼티 값을 반환한다.
+- `Array.prototype.shift` : 원본배열에서 첫번째 요소를 제거하고 제거한 요소를 반환한다.
+- `Array.prototype.concat` : 인수로 전달된 값들을 원본배열의 마지막 요소로 추가한 새로운 배열을 반환한다. 원본배열은 변경되지 않는다.
+- `Array.prototype.splice` : splice(start, deleteCount, items) start 인덱스부터 deleteCount만큼 원본배열에서 요소를 제거한다. 제거한 위치에 items를 원본배열에 삽입한다.
+- `Array.prototype.slice` : 인수로 전달된 범위의 요소들을 복사하여 배열로 반환한다. 원본배열은 변경되지 않는다.
+- `Array.prototype.join` : 원본 배열의 모든 요소를 문자열로 변환한 후 구분자로 연결한 문자열을 반환한다. 구분자는 생략가능하다.
 
 ```
 const arr = [1,2,3];
@@ -131,8 +131,8 @@ arr.join(); // '1,2,3,4';
 arr.join(''); // '1234'
 ```
 
-- Array.prototype.reverse : 원본 배열의 순서를 반대로 뒤집는다.
-- Array.prototype.fill : 인수로 전달받은 값을 배열의 처음부터 끝까지 요소로 채운다. 원본 배열이 변경된다. 두번째 인수로 요소채우기를 시작할 인덱스를 전달 할 수 있고 세번째 인수로 요소 채우기를 멈출 인덱스를 전달 할 수 있다.
+- `Array.prototype.reverse` : 원본 배열의 순서를 반대로 뒤집는다.
+- `Array.prototype.fill` : 인수로 전달받은 값을 배열의 처음부터 끝까지 요소로 채운다. 원본 배열이 변경된다. 두번째 인수로 요소채우기를 시작할 인덱스를 전달 할 수 있고 세번째 인수로 요소 채우기를 멈출 인덱스를 전달 할 수 있다.
 
 ```
 const arr = [1,2,3];
@@ -141,9 +141,9 @@ arr.fill('a');
 console.log(arr); // ['a','a','a']
 ```
 
-- Array.prototype.includes : 배열 내에 특정 요소가 있다면 true 아니면 false 두번째 인수로 검색을 시작할 인덱스를 전달 할 수 있다. 음수를 전달하면 (length + index)를 검색 시작 인덱스로 설정한다.
+- `Array.prototype.includes` : 배열 내에 특정 요소가 있다면 true 아니면 false 두번째 인수로 검색을 시작할 인덱스를 전달 할 수 있다. 음수를 전달하면 (length + index)를 검색 시작 인덱스로 설정한다.
 
-- Array.prototype.flat : 인수로 전달한 깊이만큼 재귀적으로 배열을 평탄화 한다.
+- `Array.prototype.flat` : 인수로 전달한 깊이만큼 재귀적으로 배열을 평탄화 한다.
 
 ```
 [1,[2,3,4,5]].flat(); // [1,2,3,4,5];
@@ -155,7 +155,7 @@ console.log(arr); // ['a','a','a']
 
 고차함수는 함수를 인수로 전달받거나 함수를 반환하는 함수이다.
 
-- Array.prototype.sort : 배열의 요소를 정렬한다. 원본배열을 직접 변경하며 정렬된 배열을 반환한다.
+- `Array.prototype.sort` : 배열의 요소를 정렬한다. 원본배열을 직접 변경하며 정렬된 배열을 반환한다.
 
 sort 메서드는 유니코드 코드 포인트의 순서를 따른다. 따라서 배열의 요소가 숫자타입이라면 주의가 필요하다.
 
@@ -166,7 +166,7 @@ const arr = [40,100,1,5,2,25,10];
 arr.sort((a,b) => a - b); // [1, 2, 5, 10, 25, 40, 100]
 ```
 
-- Array.prototype.forEach : 자신의 내부에서 반복문을 실행한다. forEach는 원본배열을 변경하지 않지만 콜백함수를 통해 원본 배열을 변경 할 수는 있다. forEach 메서드는 break, continue 문을 사용할 수 없다.
+- `Array.prototype.forEach` : 자신의 내부에서 반복문을 실행한다. forEach는 원본배열을 변경하지 않지만 콜백함수를 통해 원본 배열을 변경 할 수는 있다. forEach 메서드는 break, continue 문을 사용할 수 없다.
 
 ```
 const numbers = [1,2,3];
@@ -184,11 +184,11 @@ numbers.forEach(item, index, arr) => {arr[index] = item ** 2}
 console.log(numbers) // 1,4,9
 ```
 
-- Array.prototype.map : 자신을 호출한 배열의 모든 요소를 순회하면서 인수로 전달받은 콜백함수를 반복 호출한다. 그리고 콜백 함수의 반환값들로 구성된 새로운 배열을 반환한다. **_원본 배열은 변경되지 않는다._**
+- `Array.prototype.map` : 자신을 호출한 배열의 모든 요소를 순회하면서 인수로 전달받은 콜백함수를 반복 호출한다. 그리고 콜백 함수의 반환값들로 구성된 새로운 배열을 반환한다. **_원본 배열은 변경되지 않는다._**
 
-- Array.prototype.filter : 자신을 호출한 배열의 모든 요소를 순회하면서 인수로 전달받은 콜백함수를 반복 호출한다. 콜백 함수의 반환값이 true인 요소로만 구성된 새로운 배열을 반환한다. **_원본 배열은 변경되지 않는다._**
+- `Array.prototype.filter` : 자신을 호출한 배열의 모든 요소를 순회하면서 인수로 전달받은 콜백함수를 반복 호출한다. 콜백 함수의 반환값이 true인 요소로만 구성된 새로운 배열을 반환한다. **_원본 배열은 변경되지 않는다._**
 
-- Array.prototype.reduce : 자신을 호출한 배열의 모든 요소를 순회하며 인수로 전달받은 콜백함수를 반복 호출한다. 콜백 함수의 반환값을 다음 순회시에 콜백함수의 첫번째 인수로 전달하면서 콜백 함수를 호출하여 하나의 결과값을 만들어 반환한다. **_원본 배열은 변경되지 않는다._**
+- `Array.prototype.reduce` : 자신을 호출한 배열의 모든 요소를 순회하며 인수로 전달받은 콜백함수를 반복 호출한다. 콜백 함수의 반환값을 다음 순회시에 콜백함수의 첫번째 인수로 전달하면서 콜백 함수를 호출하여 하나의 결과값을 만들어 반환한다. **_원본 배열은 변경되지 않는다._**
 
 ```
 const sum = [1,2,3,4].reduce((accumulator, currentValue, index, arr) => accumulator + currentValue , 0)
@@ -196,12 +196,12 @@ const sum = [1,2,3,4].reduce((accumulator, currentValue, index, arr) => accumula
 console.log(sum) // 10
 ```
 
-- Array.prototype.some : 자신을 호출한 배열의 모든 요소를 순회하며 인수로 전달받은 콜백함수를 반복 호출한다. 콜백 함수의 반환값이 단 한번이라도 참이라면 true 모두 거짓이면 false를 반환한다.
+- `Array.prototype.some` : 자신을 호출한 배열의 모든 요소를 순회하며 인수로 전달받은 콜백함수를 반복 호출한다. 콜백 함수의 반환값이 단 한번이라도 참이라면 true 모두 거짓이면 false를 반환한다.
 
-- Array.prototype.every : 자신을 호출한 배열의 모든 요소를 순회하며 인수로 전달받은 콜백함수를 반복 호출한다 콜백 함수의 반환값이 모두 참이라면 true 단 한번이라도 거짓이라면 false를 반환한다.
+- `Array.prototype.every` : 자신을 호출한 배열의 모든 요소를 순회하며 인수로 전달받은 콜백함수를 반복 호출한다 콜백 함수의 반환값이 모두 참이라면 true 단 한번이라도 거짓이라면 false를 반환한다.
 
-- Array.prototype.find : 자신을 호출한 배열의 모든 요소를 순회하면서 인수로 전달된 콜백 함수를 호출하여 반환값이 true인 첫번째 요소를 반환한다. 반환값이 true인 요소가 없다면 undefined를 반환한다.
+- `Array.prototype.find` : 자신을 호출한 배열의 모든 요소를 순회하면서 인수로 전달된 콜백 함수를 호출하여 반환값이 true인 첫번째 요소를 반환한다. 반환값이 true인 요소가 없다면 undefined를 반환한다.
 
-- Array.prototype.findIndex : 자신을 호출한 배열의 모든 요소를 순회하면서 인수로 전달된 콜백 함수를 호출하여 반환값이 true인 첫번째 요소의 인덱스를 반환한다. 반환값이 true인 요소가 없다면 -1를 반환한다.
+- `Array.prototype.findIndex` : 자신을 호출한 배열의 모든 요소를 순회하면서 인수로 전달된 콜백 함수를 호출하여 반환값이 true인 첫번째 요소의 인덱스를 반환한다. 반환값이 true인 요소가 없다면 -1를 반환한다.
 
-- Array.prototype.flatMap : map 메서드를 통해 생성된 새로운 배열을 평탄화 한다. 즉 map 메서드와 flat 메서드를 순차적으로 실행하는 효과가 있다. (ES10)
+- `Array.prototype.flatMap` : map 메서드를 통해 생성된 새로운 배열을 평탄화 한다. 즉 map 메서드와 flat 메서드를 순차적으로 실행하는 효과가 있다. (ES10)
