deep dive 34.이터러블

--- a/content/자바스크립트/34.이터러블.md
+++ b/content/자바스크립트/34.이터러블.md
@@ -1,6 +1,6 @@
 ---
 emoji:
-title: 33. String
+title: 34. 이터러블
 date: '2022-02-19 06:00:00'
 author: sangzun
 tags: 자바스크립트
@@ -10,3 +10,203 @@ categories: javascript
 # 1. 이터레이션 프로토콜
 
 ES6에서 도입된 iteration protocol은 순회 가능한 데이터 컬렉션을 만들기 위해 EMCAScript 사양에 정의하여 미리 약속한 규칙이다.
+
+ES6 이전의 배열, 문자열, 유사 배열 객체, DOM 컬렉션등은 통일된 규약 없이 각자 나름의 구조를 가지고 for문, for ... in 문, forEach 메서드 등 다양한 방법으로 순회할 수 있었다.
+
+ES6에서는 순회 가능한 데이터 컬렉션을 이터레이션 프로토콜을 준수하는 이터러블로 통일하여 for ... of문, 스프레드 문법, 배열 디스트럭처링 할당의 대상으로 사용할 수 있도록 일원화 했다.
+
+- iterable protocol : Symbol.iterator를 프로퍼티 키로 사용한 메서드를 직접 구현하거나 프로토타입 체인을 통해 상속받은 Symbol.iterator 메서드를 호출하면 이터레이터 프로토콜을 준수한 이터레이터를 반환한다. **이러한 규약을 이터러블 프로토콜이라 한다. 이터러블 프로토콜을 준수한 객체를 `이터러블`이라 한다.**
+  `이터러블`은 for ... of 문으로 순회할 수 있으며 스프레드 문법과 배열 디스트럭처링 할당의 대상으로 사용할 수 있다.
+
+- iterator protocol : 이터러블의 Symbol.iteraotor 메서드를 호출하면 이터레이터 프로토콜을 준수한 이터레이터를 반환한다. 이터레이터는 `next` 메서드를 소유하여 `next` 메서드를 호출하면 이터러블을 순회하며 value와 done 프로퍼티를 갖는 iterator result object를 반환한다. **이러한 규약을 이터레이터 프로토이라 한다.**
+
+![iteration](/iteration.jpeg)
+
+# 1-1. 이터러블
+
+이터러블 프로토콜을 준수한 객체를 이터러블이라 한다. 이터러블인지 확인하는 함수는 아래 코드와 같다.
+
+```
+const isIterable = v => v !== null && typeof v[Symbol.iterator] === 'function';
+
+isIterable([]); // true
+isIterable(''); // true
+isIterable(new Map()); // true
+isIterable(new Set()); // true
+isIterable({}); // false
+```
+
+Symbol.iterator 메서드를 직접 구현하지 않거나 상속받지 않은 일반 객체는 이터러블 프로토콜을 준수한 이터러블이 아니다. 따라서 일반 객체는 for ... of 문으로 순회할 수 없으며 스프레드 문법과 배열 디스트럭처링 할당의 대상으로 사용할 수 없다.
+
+**하지만 일반 객체도 이터러블 프로토콜을 준수하도록 구현하면 이터러블이 된다.**
+
+# 1-2. 이터레이터
+
+이터러블의 Symbol.iterator 메서드를 호출하면 이터레이터 프로토콜을 준수한 이터레이터를 반환한다. 이터러블의 `Symbol.iterator 메서드가 반환한 이터레이터는 next 메서드를 갖는다.`
+
+```
+const array = [1,2,3];
+
+const iterator = array[Symbol.iterator]();
+
+console.log('next' in iterator); // true
+```
+
+이터레이터의 next 메서드는 이터러블의 각 요소를 순회하기 위한 포인터의 역할을 한다. next 메서드를 호출하면 이터러블을 순차적으로 한 단계씩 순회하며 순회 결과를 나타내는 `iterator result object`를 반환한다.
+
+```
+const array = [1,2,3];
+const iterator = array[Symbol.iterator]();
+
+console.log(iterator.next()); // {value: 1, done: false}
+console.log(iterator.next()); // {value: 2, done: false}
+console.log(iterator.next()); // {value: 3, done: false}
+console.log(iterator.next()); // {value: undefined, done: false}
+```
+
+이터레이터의 next 메서드가 반환하는 iterator result object의 value 프로퍼티는 현재 순회 중인 이터러블의 값을 나타내며 done 프로퍼티는 이터러블의 순회 완료 여부를 나타낸다.
+
+# 2. for ... of 문
+
+for ... of 문은 이터러블을 순회하면서 이터러블의 요소를 변수에 할당한다.
+
+```
+for (변수선언문 of 이터러블) {}
+```
+
+for ... of 문은 내부적으로 이터레이터의 next 메서드를 호출하여 이터러블을 순회하며 next 메서드가 iterator result object의 value 프로퍼티 값을 for ... of 문의 변수에 할당한다.
+
+```
+for (const item of [1,2,3]) {
+  console.log(item); // 1 2 3
+}
+```
+
+# 3. 이터러블과 유사 배열 객체
+
+유사 배열 객체는 마치 배열처럼 인덱스로 프로퍼티 값에 접근할 수 있꼬 length 프로퍼티 값을 갖는 객체이다. 따라서 유사 배열 객체는 for문으로 순회할 수 있고 배열처럼 인덱스로 프로퍼티 값에 접근할 수 있다.
+
+유사 배열 객체는 이터러블이 아닌 일반 객체다. 따라서 for ... of 문으로 순회할 수 없다. 하지만 arguments, NodeList, HTMLCollection은 유사 배열 객체이면서 이터러블이다.
+
+--> ES6에서 이터러블이 도입되면서 유사 배열 객체인 arguments, NodeList, HTMLCollection 객체에 Symbol.iterator 메서드를 구현하여 이터러블이 되었다. `모든 유사 배열 겍체가 이터러블인 것은 아니다.`
+
+ES6에서 도입된 Array.from 메서드를 사용하여 유사 배열 객체 또는 이터러블을 인수로 전달받아 배열로 변환할 수 있다.
+
+```
+const arrayLike = {
+  0:1,
+  1:2,
+  2:3,
+  length:3
+};
+
+const arr = Array.from(arrayLike);
+console.log(arr)
+```
+
+# 4. 이터레이션 프로토콜의 필요성
+
+이터레이션 프로토콜은 다양한 데이터 공급자가 하나의 순회 방식을 갖도록 규정하여 데이터 소비자가 효율적으로 다양한 데이터 공급자를 사용할 수 있도록 `데이터 소비자와 데이터 공급자를 연결하는 인터페이스 역할을 한다.`
+
+# 5. 사용자 정의 이터러블
+
+이터레이션 프로토콜을 준수하지 않는 일반 객체도 이터레이션 프로토콜을 준수하도록 구현하면 사용자 정의 이터러블이 된다. 아래의 코드는 피보나치 수열을 구현한 사용자 정의 이터러블이다.
+
+```
+const fibonacci = {
+  [Symbol.iterator]() {
+    let [pre, cur] = [0, 1];
+    const max = 10;
+
+    return {
+      next() {
+        [pre, cur] = [cur, pre + cur];
+        return { value: cur, done: cur >= max};
+      }
+    };
+  }
+};
+
+for (const num of fibonacci) {
+  console.log(num); // 1 2 3 5 8
+}
+```
+
+위의 fibonacci 이터러블은 내부에 수열의 최대값 max를 가지고 있다. max값은 고정된 값으로 전달한 값으로 변경할 방법이 없는것이 아쉽다. 수열의 최대값을 외부에서 전달하는 방법은 아래 코드와 같다.
+
+```
+const fibonacci = function(max) {
+  let [pre, cur] = [0, 1];
+
+  return {
+    [Symbol.iterator]() {
+      return {
+        next() {
+          [pre, cur] = [cur, pre + cur];
+          return { value: cur, done: cur >= max};
+        }
+      };
+    }
+  };
+};
+
+for (const num of fibonacci(10)) {
+  console.log(num); // 1 2 3 5 8
+}
+```
+
+이이터러블이면서 이레터인 객체를 생성하면 Symbol.iterator 메서드를 호출하지 않아도 된다.
+
+```
+const fibonacciFunc = function(max) {
+  let [pre, cur] = [0, 1];
+
+  return {
+    [Symbol.iterator]() {return this;},
+    next() {
+      [pre, cur] = [cur, pre + cur];
+      return {value: cur, done: cur >= max};
+    }
+  };
+};
+
+let iter = fibonacciFunc(10); // iter는 이터러블이면서 이터레이터이다.
+
+for (const num of iter) {
+  console.log(num); // 1 2 3 5 8
+}
+
+iter = fibonacciFunc(10);
+
+console.log(iter.next()); // {value: 1, done: false }
+console.log(iter.next()); // {value: 2, done: false }
+console.log(iter.next()); // {value: 3, done: false }
+console.log(iter.next()); // {value: 5, done: false }
+console.log(iter.next()); // {value: 8, done: false }
+console.log(iter.next()); // {value: 13, done: true }
+```
+
+무한 이터러블을 생성하는 함수를 통해 무한 수열을 간단히 구현할 수 있다.
+
+```
+const fibonacciFunc = function(max) {
+  let [pre, cur] = [0, 1];
+
+  return {
+    [Symbol.iterator]() {return this;},
+    next() {
+      [pre, cur] = [cur, pre + cur];
+      return {value: cur}; // 무한을 구현하기 위해 done을 생략한다.
+    }
+  };
+};
+
+for (const num of fibonacciFunc()) {
+  if (num > 10000) break;
+  console.log(num);
+}
+
+// 배열 디스트럭처링 할당을 통해 무한 이터러블에서 3개의 요소만 가져올 수 있다.
+const [f1,f2,f3] = fibonacciFunc();
+console.log(f1,f2,f3) // 1 2 3
+```
