deep dive 34.이터러블

--- a/content/자바스크립트/34.이터러블.md
+++ b/content/자바스크립트/34.이터러블.md
@@ -210,3 +210,9 @@ for (const num of fibonacciFunc()) {
 const [f1,f2,f3] = fibonacciFunc();
 console.log(f1,f2,f3) // 1 2 3
 ```
+
+`지연 평가(lazy evaluation)`는 데이터가 필요한 시점 이전까지는 미리 데이터를 생성하지 않다가 데이터가 필요한 시점이 되면 그때서야 데이터를 생성하는 기법이다.
+
+fibonacciFunc 함수가 생성한 무한 이터러블은 데이터를 공급하는 메커니즘을 구현한 것으로 데이터 소비자인 for ... of 문이나 배열 디스트럭처링 할당등이 실행되기 이전까지 데이터를 생성하지 않는다. for ... of 문의 경우 이터러블을 순회할 때 내부에서 이터레이터의 next 메서드를 호출하는데 이때 데이터가 생성된다.
+
+**지연평가를 사용하면 불필요한 데이터를 미리 생성하지 않고 필요한 데이터를 필요한 순간에 생성하므로 빠른 실행속도를 기대할 수 있고 불필요한 메모리를 소비하지 않으며 무한도 표현할 수 있다는 장점이 있다.**
