--- a/content/자바스크립트/38.브라우저의 렌더링.md
+++ b/content/자바스크립트/38.브라우저의 렌더링.md
@@ -17,6 +17,33 @@ categories: javascript
 
 4. 렌더 트리를 기반으로 html 요소의 레이아웃을 계산하고 브라우저 화면에 html 요소를 페인팅한다.
 
-# 2. 노드
+# 2. DOM
 
-HTML 요소는 HTML 문서를 구성하는 개별적인 요소를 의미한다.
+HTML 요소는 렌더링 엔진에 의해 파싱되어 DOM을 구성하는 요소 노드 객체로 변환된다. 노드 객체들로 구성된 트리 자료구조를 `DOM(Document Object Model)` 이라 한다. 노드 객체의 트리로 구조화되어 있기 때문에 DOM을 DOM트리 라고 부른다.
+
+![domtree](/domtree.png)
+
+DOM 컬렉션 객체인 HTMLCollection과 NodeList는 DOM API가 여러 개의 결과값을 반환하기 위한 DOM 컬렉션 객체다. HTMLCollection은 언제나 live 객체로 동작하고 NodeList는 대부분 non-live 객체로 동작한다.
+
+### 2-1. DOM 조작
+
+DOM 조작은 새로운 노드를 생성하여 DOM에 추가하거나 기존 노드를 삭제 또는 교체하는것이다. DOM에 새로운 노드가 추가되거나 삭제되면 리플로우, 리페인트가 발생하므로 성능에 영향을 준다. 따라서 복잡한 DOM 조작은 주의해서 사용해야 한다.
+
+#### innerHTML
+
+| 장점                                                       | 단점                                                 |
+| ---------------------------------------------------------- | ---------------------------------------------------- |
+| DOM 조작 방식에 비해 빠르고 간편하다.                      | XSS 공격에 취약하다.                                 |
+| 간편하게 문자열로 정의한 여러 요소를 DOM에 추가할 수 있다. | 해당 요소의 내용을 덮어쓴다.(=HTML을 다시 파싱한다.) |
+
+#### DOM 조작방식
+
+| 장점                                      | 단점                                          |
+| ----------------------------------------- | --------------------------------------------- |
+| 특정 노드 한개를 DOM에 추가할때 적합하다. | innerHTML보다 느리고 더 많은 코드가 필요하다. |
+
+##### insertAdjacentHTML()
+
+| 장점                                                       | 단점                 |
+| ---------------------------------------------------------- | -------------------- |
+| 간편하게 문자열로 정의된 여러 요소를 DOM에 추가할 수 있다. | XSS 공격에 취약하다. |
