--- a/content/타입스크립트/1.타입스크립트.md
+++ b/content/타입스크립트/1.타입스크립트.md
@@ -98,3 +98,93 @@ if (!myName) myName = 'kim';
 - never : `never` 는 일반적으로 함수의 리턴 타입으로 사용된다. 함수의 리턴타입을 `never` 가 사용될 경우 항상 오류를 출력하거나 리턴값을 절대로 내보내지 않음을 뜻한다. 즉 무한루프와 같다.
 
 `never` 타입을 지정한 변수에 다른타입은 할당할 수 없다.
+
+### Functions
+
+```
+function add(num1: number,num2: number) {
+	return num1 + num2;
+}
+
+add(5,10);
+add(5,'10'); // error
+```
+
+타입스크립트는 모든 파라미터가 함수에 전달되어야 한다고 가정한다. 따라서 함수를 실행할 때 매개변수의 숫자와 함수의 파라미터의 수가 일치해야 한다. 이때 파라미터 변수 뒤에 `?` 를붙이면 Optional을 사용할 수 있다.
+
+`?` 는 매개변수의 값이 있을수도 있고 없을수도 있는 상황에서 사용한다.
+
+```
+function add(num1: number, num2?: number) {
+	if(num2) return num1+num2;
+	else return num1;
+}
+```
+
+### Interface
+
+`interface` 는 변수의 타입으로 사용할 수 있다. 이 때 인터페이스를 타입으로 선언한 변수는 interface를 준수해야 한다.
+
+```
+interface Todo {
+	id: number;
+	content: string;
+	completed: boolean;
+}
+
+let todo:Todo;
+
+todo = {id:1, content: 'ts', completed: false};
+
+let todos: Todo[] = [];
+function addTodo(todo: Todo) {
+	todos = [...todos, todo];
+}
+
+const newTodo: Todo = {id:1, content: 'ts', completed: false};
+addTodo(newTodo)
+```
+
+### Class
+
+타입스크립트의 클래스는 접근제어자를 설정할 수 있다.
+
+`public` : 클래스 외부에서 접근 가능 (기본값)
+
+`private` : 클래스 내부에서만 접근 가능
+
+`protected` : 자신 클래스를 포함한 서브클래스에서만 접근 가능
+
+```
+class Employee {
+	employeeName: string;
+
+	constructor(name: string) {
+		this.employeeName = name;
+	}
+
+	greet() {
+		console.log(`Good Morning ${this.employeeName}`);
+	}
+}
+
+let emp1 = new Employee('Kim'); // Kim
+emp1.greet() // Good Moring Kim
+```
+
+```
+class Manager extends Employee {
+    constructor(managerName: string) {
+        super(managerName);
+    }
+
+    delegateWork() {
+        console.log(`Manager delegation tasks`)
+    }
+}
+
+let m1 = new Manager('Lee');
+m1.delegateWork(); // Manager delegation tasks
+m1.greet(); // Good Morning Lee
+console.log(m1.employeeName) // Lee
+```
