--- a/content/타입스크립트/2.타입스크립트 설정.md
+++ b/content/타입스크립트/2.타입스크립트 설정.md
@@ -201,3 +201,60 @@ const sub: BinaryFn = (a,b) => a-b;
 const mul: BinaryFn = (a,b) => a*b;
 const div: BinaryFn = (a,b) => a/b;
 ```
+
+# 7. 타입과 인터페이스의 차이점
+
+타입스크립트에서 named type을 정의하는 방법은 두 가지이다.
+
+```
+type Tstate = {
+  name: string;
+  capital: string;
+}
+
+interface IState = {
+  name: string;
+  capital: string;
+}
+```
+
+대부분의 경우 타입과 인터페이스 어느것을 선택하여 사용해도 상관없다. 그러나 같은 상황에서는 동일한 방법으로 타입을 정의해 일관성을 유지해야 한다.
+
+type은 일반적으로 interface보다 쓰임새가 많다. type 키워드는 유니온이 될 수도있고 매핑된 타입 또는 조건부 타입같은 기능에 활용되기도 한다. 튜플과 배열 타입도 type 키워드를 이용해 더 간결하게 표현할 수 있다.
+
+```
+type Pair = [number,number];
+type StringList = string[];
+type NameNums = [string, ...number[]];
+```
+
+type과 interface는 타입을 확장하는 방법에 차이가 있다. type은 `&`연산자 interface는 `extends`를 이용한다.
+
+```
+interface IStudent2 extends IStudent  {
+  age: number;
+}
+
+type TStudent2 = TStudent & {
+  age: number;
+}
+```
+
+또한 interface는 동일한 이름으로 다시 interface를 정의해 확장하는것이 가능하다.
+
+```
+interface IState {
+  name: string;
+  capital: string;
+}
+
+interface IState {
+  population: number;
+}
+
+const wyoming: IState = {
+  name: "Wyoming",
+  capital: "Cheyenne",
+  population: 500_500;
+}
+```
