--- a/content/알고리즘/11047.md
+++ b/content/알고리즘/11047.md
@@ -1,10 +1,10 @@
 ---
 emoji: 😂
-title: 'TIL 220625'
+title: '백준 11047'
 date: '2022-06-25 00:00:00'
 author: sangzun
-tags: TIL, 알고리즘
-categories: TIL
+tags: 백준,알고리즘
+categories: 알고리즘
 ---
 
 ### 백준 11047
