--- a/content/챌린지/02. 02. JS and CSS Clock.md
+++ b/content/챌린지/02. 02. JS and CSS Clock.md
@@ -1,6 +1,6 @@
 ---
 emoji: 😂
-title: 02. JavaScript Challenge
+title: 02. JS and CSS Clock
 date: '2022-06-08 00:00:00'
 author: sangzun
 tags: 자바스크립트
